--- a/css/main.css
+++ b/css/main.css
@@ -332,7 +332,7 @@ body {
       color: #555555; }
 
 .center {
-  padding: 0 0.32rem;
+  padding: 0 0.4rem;
   margin: 0 auto;
   overflow: hidden; }
 
@@ -419,3 +419,197 @@ body {
     display: block; }
   .detail .detail_main p {
     text-align: justify; }
+
+.ny_about .about_main {
+  font-size: 0.4rem;
+  line-height: 0.72rem;
+  color: #666666;
+  margin-top: 0.48rem;
+  text-align: justify; }
+
+.ny_about .about_img {
+  margin-top: 0.64rem;
+  display: block;
+  width: 100%;
+  height: 6.512rem;
+  margin-bottom: 0.8rem; }
+
+.ny_honor .honor_group {
+  width: 11.52rem;
+  margin-top: 0.8rem;
+  overflow: hidden; }
+  .ny_honor .honor_group li {
+    width: 5.44rem;
+    height: 6.8rem;
+    float: left;
+    margin-right: 0.32rem; }
+    .ny_honor .honor_group li a {
+      display: block; }
+      .ny_honor .honor_group li a .img_box {
+        display: block;
+        width: 5.408rem;
+        height: 5.408rem;
+        border: 1px solid #dbdbdb; }
+        .ny_honor .honor_group li a .img_box img {
+          display: block;
+          width: 4.752rem;
+          height: 3.248rem;
+          margin: 1.072rem auto; }
+      .ny_honor .honor_group li a .title {
+        display: block;
+        font-size: 0.416rem;
+        line-height: 1.376rem;
+        text-align: center;
+        color: #555555; }
+
+.honor_more {
+  display: block;
+  width: 3.2rem;
+  height: 0.8rem;
+  padding-top: 0.544rem;
+  background-position: center 0;
+  background-repeat: no-repeat;
+  margin: 0.88rem auto;
+  text-align: center;
+  font-size: 0.384rem;
+  line-height: 0.8rem;
+  color: #999999;
+  margin-bottom: 0.48rem; }
+
+.ny_result .result_group {
+  margin-top: 0.64rem; }
+  .ny_result .result_group li {
+    margin-bottom: 0.64rem; }
+    .ny_result .result_group li a {
+      display: block;
+      position: relative; }
+      .ny_result .result_group li a img {
+        display: block;
+        width: 11.2rem;
+        height: 6.752rem; }
+      .ny_result .result_group li a .title {
+        display: block;
+        position: absolute;
+        top: 5.392rem;
+        width: 100%;
+        height: 1.36rem;
+        background-color: rgba(218, 37, 28, 0.85);
+        font-size: 0.48rem;
+        line-height: 1.36rem;
+        color: #ffffff;
+        text-align: center; }
+      .ny_result .result_group li a .summary {
+        display: block;
+        width: 10.528rem;
+        font-size: 0.4rem;
+        line-height: 0.72rem;
+        color: #777777;
+        text-align: justify;
+        padding: 0.304rem 0.32rem;
+        border: 1px solid #d9d9d9; }
+
+.ny_message .message_box {
+  margin-top: 0.64rem; }
+  .ny_message .message_box form input {
+    display: block;
+    width: 10.72rem;
+    height: 1.12rem;
+    margin-bottom: 0.4rem;
+    border: 0;
+    outline: 0;
+    padding: 0 0.24rem;
+    font-size: 0.352rem;
+    color: #888888;
+    line-height: 1.12rem;
+    background-color: #f1f1f1; }
+  .ny_message .message_box form textarea {
+    display: block;
+    width: 10.72rem;
+    height: 3.12rem;
+    margin-bottom: 0.4rem;
+    border: 0;
+    outline: 0;
+    padding: 0 0.24rem;
+    font-size: 0.352rem;
+    color: #888888;
+    line-height: 1.12rem;
+    background-color: #f1f1f1; }
+  .ny_message .message_box form .submit {
+    display: block;
+    width: 100%;
+    height: 1.12rem;
+    margin-bottom: 0.4rem;
+    border: 0;
+    outline: 0;
+    padding: 0 0.24rem;
+    font-size: 0.448rem;
+    color: #fff;
+    line-height: 1.12rem;
+    border-radius: 0;
+    background-color: #db251d; }
+
+.ny_contact .map_box {
+  width: 11.2rem;
+  height: 5.696rem;
+  margin-top: 0.48rem; }
+
+.ny_contact .contact_message {
+  font-size: 0.4rem;
+  line-height: 0.72rem;
+  color: #666666;
+  margin-top: 0.8rem; }
+
+.iw_poi_title {
+  color: #CC5522;
+  font-size: 0.384rem;
+  font-weight: bold;
+  overflow: hidden;
+  padding-right: 0.208rem;
+  white-space: nowrap; }
+
+.iw_poi_content {
+  font: 0.32rem arial, sans-serif;
+  overflow: visible;
+  padding-top: 0.064rem;
+  white-space: -moz-pre-wrap;
+  word-wrap: break-word; }
+
+.BMap_Marker {
+  background: url(../images/map-img.png) no-repeat center !important; }
+
+.pop .center {
+  padding: 0 !important; }
+
+.BMapLabel {
+  font-size: 0.32rem !important; }
+
+.news_list {
+  margin-top: 0.16rem; }
+  .news_list li {
+    padding-top: 0.48rem;
+    padding-bottom: 0.48rem;
+    padding-left: 4.576rem;
+    position: relative;
+    border-bottom: 1px solid #eaeaea; }
+    .news_list li img {
+      display: block;
+      position: absolute;
+      left: 0;
+      top: 0.48rem;
+      width: 4.416rem;
+      height: 2.288rem; }
+    .news_list li .title {
+      display: block;
+      font-size: 0.416rem;
+      line-height: 0.64rem;
+      color: #666666;
+      height: 1.28rem;
+      width: 5.952rem;
+      overflow: hidden;
+      margin-top: 0.08rem; }
+    .news_list li .date {
+      display: block;
+      font-size: 0.352rem;
+      line-height: 0.64rem;
+      margin-top: 0.304rem;
+      color: #888888; }
